<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
<!--	<parent>-->
<!--		<groupId>org.springframework.boot</groupId>-->
<!--		<artifactId>spring-boot-starter-parent</artifactId>-->
<!--		<version>2.7.2</version>-->
<!--	</parent>-->
	<groupId>com.jansora.repo</groupId>
	<artifactId>repo-parent</artifactId>
	<version>0.1.0</version>
	<packaging>pom</packaging>
	<name>repo-parent</name>
	<description>repo-parent</description>
	<modules>
		<module>core</module>
	</modules>
	<properties>
		<java.version>17</java.version>
		<javac.src.version>17</javac.src.version>
		<javac.target.version>17</javac.target.version>
	</properties>

	<distributionManagement>
		<repository>
			<id>rdc-releases</id>
			<name>rdc-releases</name>
			<url>https://packages.aliyun.com/maven/repository/2054722-release-rg7DwN</url>
			<uniqueVersion>true</uniqueVersion>
		</repository>
		<snapshotRepository>
			<id>rds-snapshots</id>
			<name>rdc-snapshots</name>
			<url>https://packages.aliyun.com/maven/repository/2054722-snapshot-GDKyLs/</url>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>
	<build>
		<plugins>
<!--			<plugin>-->
<!--				<groupId>org.springframework.boot</groupId>-->
<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
<!--				<version>2.5.6</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<goals>-->
<!--							<goal>repackage</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<configuration>

				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
